objects/CN_Arrival_Reminder__c.object
<CustomObject>
    <fields>
        <fullName>CN_ArName__c</fullName>
        <label>ArName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Area__c</fullName>
        <label>Area</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Arrival Reminder</relationshipLabel>
        <relationshipName>Arrival_Reminder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Submit_Time__c</fullName>
        <label>Customer Submit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Email_Send__c</fullName>
        <label>Notify Triggered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>N</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Lincense_Name_CN__c</fullName>
        <formula>CN_Contact__r.Account.Name</formula>
        <label>Lincense Name(CN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_MG_Arrival_Reminder_Id__c</fullName>
        <externalId>true</externalId>
        <label>MG Arrival Reminder Id</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Phone_Number__c</fullName>
        <formula>CN_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>产品描述</description>
        <label>SKU Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Arrival Reminder</relationshipLabel>
        <relationshipName>Arrival_Reminder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Quantity_Want_Buy__c</fullName>
        <label>Quantity（want buy）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_SKU_ID__c</fullName>
        <label>SKU Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sold_To_Party_Customer_Code__c</fullName>
        <formula>CN_Contact__r.CN_Sold_To_Party_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold-To Party Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Warehouse__c</fullName>
        <label>Warehouse</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_feedback__c</fullName>
        <label>feedback</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Arrival Reminder</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_SKU_ID__c</columns>
        <columns>CN_Product__c</columns>
        <columns>CN_Contact__c</columns>
        <columns>CN_Phone_Number__c</columns>
        <columns>CN_Lincense_Name_CN__c</columns>
        <columns>CN_Sold_To_Party_Customer_Code__c</columns>
        <columns>CN_Quantity_Want_Buy__c</columns>
        <columns>CN_Customer_Submit_Time__c</columns>
        <columns>CN_Email_Send__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ARM-{0000}</displayFormat>
        <label>Arrival Reminder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Arrival Reminder</pluralLabel>
    <recordTypes>
        <fullName>CN_E_Commerce_Record</fullName>
        <active>true</active>
        <label>E-Commerce Record</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>